Update Start with a Simple Gene Expression Example.ipynb

--- a/Start with a Simple Gene Expression Example.ipynb
+++ b/Start with a Simple Gene Expression Example.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "source": [
     "## 2. Create a GeneExp.py\n",
-    "Input gene expression system as a `.py` file. You can change the initial conditions, species number constraint, reaction rates and the stoichiometric matrix in the function 'rates' . **For a new system, copy GeneExp.py and change the below parameters: Nothing needs to be changed in function 'init' and 'Propensity'.**"
+    "Input gene expression system as a `.py` file. You can change the initial conditions, species number constraint, reaction rates and the stoichiometric matrix in the function 'rates' . **For a new system, copy GeneExp.py and change the below parameters. Nothing needs to be changed in functions 'init' and 'Propensity' of GeneExp.py.**"
    ]
   },
   {
