Update Detailed Version of Gene Expression.ipynb

--- a/Detailed Version of Gene Expression.ipynb
+++ b/Detailed Version of Gene Expression.ipynb
@@ -8,7 +8,7 @@
     "# Into to NNCME with a Gene Expression Example - Detailed Version\n",
     "\n",
     "This is a detailed step-by-step guideline of implementing a gene expression example with NNCME. \\\n",
-    "A simplified version can be seen in `Start with a Simple Gene Expression Example.ipynb`.\\\n",
+    "A simplified version can be seen in `A Simple Template.ipynb`.\\\n",
     "If you would like to implement a more complex system, please refer to the toggle switch example (`Toggle Switch System.ipynb`).\\\n",
     "You can also explore more through the `.py` files of other representative examples.\n",
     "\n",
@@ -56,7 +56,7 @@
    "metadata": {},
    "source": [
     "## 2. Create a GeneExp.py\n",
-    "Input gene expression system as a `.py` file. Include initial conditions, species number constraint, reaction rates and the stoichiometric matrix in the function 'rates' . What's more, function 'init' and 'Propensity' are almost the same and are essential for every system."
+    "Input gene expression system as a `.py` file. Include initial conditions, species number constraint, reaction rates and the stoichiometric matrix in the function 'rates' . In addition, function 'init' and 'Propensity' are almost the same and are essential for every system."
    ]
   },
   {
